fix(global): fix pagnation style collaps with table

--- a/src/common/global.basic.css
+++ b/src/common/global.basic.css
@@ -259,12 +259,7 @@ button:disabled:not(.btn-prev):not(.btn-next),
   font-size: 20px;
   font-weight: 400;
 }
-.sp-card .el-form {
-  margin-bottom: calc(1px - var(--card-spacing) - 1px);
-}
-.sp-card .el-form + .el-pagination {
-  margin-top: calc(2 * var(--card-spacing));
-}
+
 /* table 内编辑样式 */
 .editable-cell-value-wrap {
   padding: 5px 12px;
